--- a/src/main/resources/META-INF/resources/integerBinaryTree.xhtml
+++ b/src/main/resources/META-INF/resources/integerBinaryTree.xhtml
@@ -68,18 +68,15 @@
                     <p:ajax event="collapse" process="@this" update="@form:growl" listener="#{integerBinaryTreeMBean.nodeCollapseListener}" />
                     <p:ajax event="expand" process="@this" update="@form:growl" listener="#{integerBinaryTreeMBean.nodeExpandListener}" />
 
-                    <p:organigramNode>
-                        <h:outputText value="#{node.data}" />
-                    </p:organigramNode>
-
                     <p:organigramNode type="division"
+                                      style="font-size: 11px; width: 25px; height: 25px;"
                                       styleClass="division"
                                       iconPos="left">        
                         <h:outputText value="#{node.data}" />
                     </p:organigramNode>
 
                     <p:organigramNode type="employee"
-                                      style="font-size: 26px;"
+                                      style="font-size: 22px; width: 50px; height: 50px;"
                                       styleClass="employee">
                         <h:outputText value="#{node.data}" />
                     </p:organigramNode>
